syntax = "proto3";

package order;

option csharp_namespace = "OrderService.GrpcGenerated";

service OrderService {
    rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
    rpc GetUserOrders(GetUserOrdersRequest) returns (GetUserOrdersResponse);
}

message UpdateOrderStatusRequest {
    string order_id = 1;
    string status = 2;
}

message UpdateOrderStatusResponse {
    string order_id = 1;
    string updated_status = 2;
}

message GetUserOrdersRequest {
    string user_id = 1;
}

message GetUserOrdersResponse {
    repeated OrderMessage orders = 1;
}

message OrderMessage {
    string order_id = 1;
    string status = 2;
    double price = 3;
}